# osmi_simple_views

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindOsmium.cmake  FindProtozero.cmake
src/: CMakeLists.txt  abstract_view_handler.cpp  abstract_view_handler.hpp  any_relation_collector.cpp  any_relation_collector.hpp  geometry_view_handler.cpp  geometry_view_handler.hpp  handler_collection.cpp  handler_collection.hpp  highway_relation_manager.cpp  highway_relation_manager.hpp  highway_view_handler.cpp  highway_view_handler.hpp  ogr_output_base.cpp  ogr_output_base.hpp  options.hpp  osmi_places.cpp  osmi_simple_views.cpp  places_handler.cpp  places_handler.hpp  sac_scale_view_handler.cpp  sac_scale_view_handler.hpp  tagging_view_handler.cpp  tagging_view_handler.hpp  turn_restriction.cpp  turn_restriction.hpp  turn_restrictions_manager.cpp  turn_restrictions_manager.hpp
test/: CMakeLists.txt
test/t/: test_highway_view.cpp  test_tagging_view.cpp  test_turn_restrictions.cpp
